# home-manager-config

./: .editorconfig  .gitignore  .justfile  .typos.toml  README.adoc  flake.nix  home.nix  lychee.toml  pre-commit-hooks.nix  treefmt.nix
.github/: settings.yml
.github/workflows/: build.yaml  flake-checker.yaml  link-checker.yaml  lock-updater.yaml  treefmt.yaml  update-nix-direnv.yaml  update-nixos-release.yaml  update-packages.yaml  yamllint.yaml
_mixins/desktop/: default.nix
_mixins/desktop/apps/: default.nix
_mixins/desktop/apps/bedtime-pk/: config.json  default.nix
_mixins/desktop/apps/element/: default.nix
_mixins/desktop/apps/ludusavi/: default.nix
_mixins/desktop/apps/nextcloud/: default.nix
_mixins/desktop/hyprland/: default.nix  monitors.nix
_mixins/desktop/kde/: default.nix
_mixins/desktop/sway/: default.nix
_mixins/features/: default.nix
_mixins/features/development/: default.nix
_mixins/features/fonts/: default.nix
_mixins/scripts/gpg-restore/: default.nix
_mixins/sops/: default.nix
overlays/: default.nix
overlays/bedtime-pk/: bedtime-pk.sh  package.nix
overlays/joystickwake/: package.nix
overlays/kidlestretchly/: CMakeLists.txt  KIdleStretchly.cpp  KIdleStretchly.hpp  main.cpp  package.nix
overlays/opentabletdriver-plugins/: default.nix
overlays/opentabletdriver-plugins/Preset.Binding/: deps.json  package.nix
overlays/stretchly-hyprland/: package.nix  stretchly-hyprland.sh
overlays/stretchly-inhibit/: package.nix  stretchly-inhibit.sh
scripts/gpg-restore/: gpg-restore.sh
scripts/nixfmt-plus/: nixfmt-plus.sh
(+58 files in other folders)
